--- a/NaturalSelectionLib/NaturalSelectionLib.csproj
+++ b/NaturalSelectionLib/NaturalSelectionLib.csproj
@@ -5,7 +5,7 @@
         <AssemblyName>fandovec03.NaturalSelectionLib</AssemblyName>
         <Product>NaturalSelectionLib</Product>
         <!-- Change to whatever version you're currently on. -->
-        <Version>0.1.0</Version>
+        <Version>0.2.3</Version>
     </PropertyGroup>
 
     <!-- Project Properties -->
@@ -42,10 +42,11 @@
         <PackageReadmeFile>README.md</PackageReadmeFile>
         <PackageLicenseFile>LICENSE</PackageLicenseFile>
         <Description>Personal Library with functions for getting, sorting and filtering enemies</Description>
-        <PackageIcon>NaturalSelectionLibraryIconTemp.png</PackageIcon>
+        <PackageIcon>NuGetIcon.png</PackageIcon>
         <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
         <Authors>Fandovec03</Authors>
         <RepositoryUrl>https://github.com/Fandovec03/NaturalSelectionLib.git</RepositoryUrl>
+        <PackageReleaseNotes>Fixed some issues regarding dependency and CHANGELOG formating</PackageReleaseNotes>
     </PropertyGroup>
     <ItemGroup>
       <None Include="..\LICENSE">
@@ -68,6 +69,10 @@
     </ItemGroup>
     <ItemGroup>
       <None Update="NaturalSelectionLibraryIconTemp.png">
+        <Pack>True</Pack>
+        <PackagePath>\</PackagePath>
+      </None>
+      <None Update="NuGetIcon.png">
         <Pack>True</Pack>
         <PackagePath>\</PackagePath>
       </None>
