--- a/NaturalSelectionLib/NaturalSelectionLib.csproj
+++ b/NaturalSelectionLib/NaturalSelectionLib.csproj
@@ -5,7 +5,7 @@
         <AssemblyName>fandovec03.NaturalSelectionLib</AssemblyName>
         <Product>NaturalSelectionLib</Product>
         <!-- Change to whatever version you're currently on. -->
-        <Version>0.4.0</Version>
+        <Version>0.4.1-alpha3</Version>
     </PropertyGroup>
 
     <!-- Project Properties -->
