--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
 bin
 obj
 .vs
+NaturalSelectionLib/DLLs/fandovec03.NaturalSelectionLib.dll
+NaturalSelectionLib/CHANGELOG.md
+NaturalSelectionLib/DLLs/fandovec03.NaturalSelectionLib.dll
