--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ obj
 NaturalSelectionLib/DLLs/fandovec03.NaturalSelectionLib.dll
 NaturalSelectionLib/CHANGELOG.md
 NaturalSelectionLib/DLLs/fandovec03.NaturalSelectionLib.dll
+NaturalSelectionLib/NaturalSelectionLib.zip
