--- a/NaturalSelectionLib/NaturalSelectionLib.csproj
+++ b/NaturalSelectionLib/NaturalSelectionLib.csproj
@@ -67,6 +67,12 @@
     <ItemGroup Condition="'$(TargetFramework.TrimEnd(`0123456789`))' == 'net'">
         <PackageReference Include="Microsoft.NETFramework.ReferenceAssemblies" Version="1.0.2" PrivateAssets="all" />
     </ItemGroup>
+
+    <ItemGroup>
+      <Reference Include="PathfindingLib">
+        <HintPath>Dependencies\PathfindingLib.dll</HintPath>
+      </Reference>
+    </ItemGroup>
     <ItemGroup>
       <None Update="NuGetIcon.png">
         <Pack>True</Pack>
